--- a/scripts/scriptSink/fecundity_models.Rmd
+++ b/scripts/scriptSink/fecundity_models.Rmd
@@ -17,8 +17,8 @@ library(forcats)
 library(ggrepel)
 library(car)
 
-source("color_map.R")
-source("ggplot_theme.R")
+source("../../../Functions_and_Themes/color_map.R")
+source("../../../Functions_and_Themes/ggplot_theme.R")
 ```
 
 # Data
